--- a/api-catalog.yml
+++ b/api-catalog.yml
@@ -9,19 +9,13 @@ spring:
     username: usr-movie
     password: pwd-movie
 
-  jpa:
-    generate-ddl: true
-    hibernate:
-      enable_lazy_load_no_trans: true
-      event:
-        merge:
-          entity_copy_observer: allow
-      ddl-auto: update
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL55Dialect
-        format_sql: true
-    show-sql: false
+  mongodb:
+    embedded:
+      version: 4.0.2
+  data:
+    mongodb:
+      database: test
+      port: 27017
 
 eureka:
   instance:
