--- a/api-serie.yml
+++ b/api-serie.yml
@@ -5,10 +5,10 @@ spring:
     name: serie-service
   data:
     mongodb:
-      username: usr-check-mongo
-      password: pwd-check-mongo
-      database: check-dev-mongo
-      port: 27017
+      username: usr-final-mongo
+      password: pwd-final-mongo
+      database: api-serie-mongo
+      port: 27018
       host: localhost
 
 eureka:
