--- a/api-serie.yml
+++ b/api-serie.yml
@@ -3,6 +3,8 @@ server:
 spring:
   application:
     name: serie-service
+  zipkin:
+    baseUrl: http://localhost:9411/
   data:
     mongodb:
       username: usr-final-mongo
