--- a/api-catalog.yml
+++ b/api-catalog.yml
@@ -31,3 +31,25 @@ management:
     web:
       exposure:
         include: health, info
+resilience4j.retry:
+  instances:
+    retryCatalog:
+      maxAttempts: 3
+      waitDuration: 10s
+      enableExponentialBackoff: true
+      exponentialBackoffMultiplier: 2
+      retryExceptions:
+        - org.springframework.web.client.HttpServerErrorException
+        - java.io.IOException
+
+resilience4j.circuitbreaker:
+  instances:
+    clientCatalog:
+      registerHealthIndicator: true
+      slidingWindowSize: 10
+      permittedNumberOfCallsInHalfOpenState: 3
+      slidingWindowType: TIME_BASED
+      minimumNumberOfCalls: 20
+      waitDurationInOpenState: 50s
+      failureRateThreshold: 50
+      eventConsumerBufferSize: 10
