--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -15,6 +15,10 @@ spring:
           uri: lb://movie-service
           predicates:
             - Path=/api/v1/movies/**
+        - id: api-serie
+          uri: lb://serie-service
+          predicates:
+            - Path=/api/v1/series/**
             
 eureka:
   instance:
